--- a/BookStore.Infrastructure.IoC/BookStore.Infrastructure.IoC.csproj
+++ b/BookStore.Infrastructure.IoC/BookStore.Infrastructure.IoC.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BookStore.Application\BookStore.Application.csproj" />
+    <ProjectReference Include="..\BookStore.Domain\BookStore.Domain.csproj" />
     <ProjectReference Include="..\BookStore.Infrastructure.Bus\BookStore.Infrastructure.Bus.csproj" />
     <ProjectReference Include="..\BookStore.Infrastructure.Data\BookStore.Infrastructure.Data.csproj" />
   </ItemGroup>
